--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Nous & Company is a Taiwanese consulting firm that offers a plethora of services for SMB in the IT industry. We tailor strategies to solve your pain points."
     />
-    <title>NOUS & COMPANY LTD Github</title>
+    <title>NOUS & COMPANY LTD</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
